# Project-Mystery

./: .gitignore  .gitmodules  LLM_INTEGRATION_LOG.md  README.md
backend/: .gitignore  LO_RA_SETUP.md  app.py  database_manager.py  endpoints.md  flake.nix  llm_engine.py  main.py  nix_fix.patch  pyproject.toml  seed_db.py  session_manager.ps1  session_manager.sh
backend/data/lora/: dr_tara.jsonl  intern_leo.jsonl
backend/scripts/: train_lora.py  verify_local_lora.py
backend/src/: server.py
backend/src/models/: character_model.json  conversation.py  slm_interface.py
backend/src/resources/: chat.py  player.py  session.py
backend/src/services/: database_service.py  database_status_codes.py  slm_service.py
backend/src/services/slms/: prompt_composer.py  slm_custom.py  slm_local_lora.py  slm_mlvoca.py
game/: .ignore  CMakeLists.txt  Makefile  TODO.md  compile_commands.json  flake.nix  imgui.ini  perf.json
game/engine/: asset.hpp  asset_font.cpp  asset_font.hpp  asset_manager.cpp  asset_manager.hpp  asset_texture.cpp  asset_texture.hpp  engine.cpp  engine.hpp  error.cpp  error.hpp  main_loop.cpp  main_loop.hpp  perf.cpp  perf.hpp  scene.hpp  scene_manager.cpp  scene_manager.hpp
game/game/: assets.hpp  global.hpp  init.cpp  init.hpp  main.cpp  npc.cpp  npc.hpp  scene_ingame.cpp  scene_ingame.hpp  scene_mainmenu.cpp  scene_optionsmenu.cpp  scenes.hpp
llm_standalone/: .gitignore  README.md  app.py  backend_db_bridge.py  character_model.json  terminal_client.py  train_lora.py
llm_standalone/adapters/dr_tara/: adapter_config.json
llm_standalone/adapters/intern_leo/: adapter_config.json
llm_standalone/adapters/intern_leo/splits/: train.jsonl  val.jsonl
llm_standalone/data/: dr_tara.jsonl  intern_leo.jsonl
model/: LLM_INTEGRATION_LOG.md
model/backend/: README.md  app.py  character_model.json  database_manager.py  llm_engine.py  requirements.txt  serve.py  setup.sh
model/backend/adapters/leo/: adapter_config.json
model/backend/adapters/leo/leo_model/: adapter_config.json  adapter_model.safetensors
model/backend/adapters/tara/: adapter_config.json  tokenizer.json  tokenizer_config.json
model/backend/adapters/tara/tara_model/: adapter_config.json  adapter_model.safetensors
model/backend/training/: leo_data.jsonl  tara_data.jsonl  train_leo.py  train_tara.py
model/backend/training/leo_training_output/checkpoint-10/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
model/backend/training/leo_training_output/checkpoint-20/: adapter_config.json  adapter_model.safetensors  optimizer.pt  trainer_state.json
model/backend/training/leo_training_output/checkpoint-30/: adapter_model.safetensors  optimizer.pt  rng_state.pth  trainer_state.json
model/backend/training/tara_training_output/checkpoint-10/: README.md  adapter_model.safetensors  optimizer.pt  trainer_state.json
model/backend/training/tara_training_output/checkpoint-20/: adapter_model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
model/backend/training/tara_training_output/checkpoint-30/: adapter_model.safetensors  optimizer.pt  trainer_state.json
model/train/seed_data/: leo_seed.jsonl  tara_seed.jsonl
webui/: characters.js  chat.js  index.html  style.css
