[project]
name = "project_mystery_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "chromadb>=1.5.2",
    "datasets>=4.6.1",
    "flask>=3.1.3",
    "flask-restx>=1.3.2",
    "peft>=0.18.0",
    "pytest>=9.0.2",
    "tomli>=2.4.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
